--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,17 +19,14 @@
     "react-loader-spinner": "^5.4.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.67.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.11"
   }
 }
