--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,20 +6,27 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "font-awesome": "^4.7.0",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "npm": "^10.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-paginate": "^8.2.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.67.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
@@ -48,6 +55,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv-webpack": "^8.0.1",
     "vite": "^5.0.11"
   }
 }
